added new section

--- a/css/body.css
+++ b/css/body.css
@@ -25,6 +25,11 @@ body {
     justify-content: center;
 }
 
+.konten-atas {
+    display: flex;
+    justify-content: center;
+}
+
 .container-fluid {
     display: flex;
     justify-content: center;
@@ -37,6 +42,12 @@ h1 {
     font-size: 58px;
     color: var(--warna-ungu);
     line-height: 80px;
+}
+
+h3 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+    color: var(--warna-ungu);
 }
 
 h5  {
@@ -72,6 +83,11 @@ p {
                 text-align: center;
             }
 
+            h3 {
+                font-size: 26px;
+                text-align: center;
+            }
+
             h5  {
                 text-align: center;
             }
@@ -90,6 +106,11 @@ p {
                 text-align: center;
             }
 
+            h3 {
+                font-size: 24px;
+                text-align: center;
+            }
+
             h5  {
                 text-align: center;
             }
@@ -105,6 +126,11 @@ p {
             h1 {
                 font-size: 36px;
                 line-height: 40px;
+                text-align: center;
+            }
+
+            h3 {
+                font-size: 22px;
                 text-align: center;
             }
 
