--- a/css/body.css
+++ b/css/body.css
@@ -36,6 +36,17 @@ body {
     align-items: center;
 }
 
+.ctn {
+    width: 80%;
+    margin: 100px auto;
+    background-image: url(../img/bg.jpg);
+    background-color: var(--warna-ungu);
+    border-radius: 50px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-blend-mode: multiply;
+}
+
 h1 {
     font-family: 'Poppins', sans-serif;
     font-weight: 700;
