--- a/css/main.css
+++ b/css/main.css
@@ -69,7 +69,7 @@
 }
 
 .tulisan h1, .tulisan h5 {
-    color: var(--warna-putih);
+    color: var(--warna-putih, white);
 }
 
 .video {
@@ -150,6 +150,6 @@
 
 .demonstrasi h1 {
     text-align: center;
-    color: var(--warna-putih);
+    color: var(--warna-putih, white);
     margin-bottom: 30px;
 }
