--- a/css/main.css
+++ b/css/main.css
@@ -154,5 +154,18 @@
     margin-bottom: 30px;
 }
 
+.para-ahli img {
+    max-width: 100%;
+    margin: 18px auto;
+}
 
-    
+        @media (max-width:768px) {
+            .para-ahli img {
+                max-width: 80%;
+            }
+        }
+
+.h1-tengah h1 {
+    text-align: center;
+    margin: 0px 0px 30px 0px;
+}
