--- a/css/main.css
+++ b/css/main.css
@@ -169,3 +169,16 @@
     text-align: center;
     margin: 0px 0px 30px 0px;
 }
+
+.Kelebihan img {
+    max-width: 18%;
+    margin: 20px;
+}
+
+.Kelebihan{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0px 50px;
+}
