--- a/css/main.css
+++ b/css/main.css
@@ -182,3 +182,31 @@
     align-items: center;
     padding: 0px 50px;
 }
+
+.galeri h1 {
+    margin-bottom: 30px;
+    text-align: center;
+    color: var(--warna-putih);
+}
+
+.galeri img {
+    max-width: 100%;
+    margin: 20px;
+}
+
+.galeri {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.background {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+.background p {
+    text-align: center;
+    color: var(--warna-hitam);
+}
