--- a/css/body.css
+++ b/css/body.css
@@ -48,8 +48,8 @@ body {
 }
 
 button {
-    margin-top: 30px;
-    padding: 18px 50px;
+    margin: 30px auto;
+    padding: 18px 35px;
     border: none;
     border-radius: 50px;
     text-decoration: none;
