--- a/css/body.css
+++ b/css/body.css
@@ -183,3 +183,26 @@ p {
                 text-align: center;
             }
         }
+
+        @media (max-width:360px) {
+            h1 {
+                font-size: 24px;
+                line-height: 40px;
+                text-align: center;
+            }
+
+            h3 {
+                font-size: 22px;
+                text-align: center;
+            }
+
+            h5  {
+                text-align: center;
+            }
+            
+            p {
+                font-size: 11px;
+                line-height: 23px;
+                text-align: center;
+            }
+        }
