--- a/css/main.css
+++ b/css/main.css
@@ -218,7 +218,9 @@
     color: var(--warna-hitam);
 }
 
-
+.owl-carousel .owl-dots.disabled, .owl-carousel .owl-nav.disabled {
+    display: none;
+}
 
 
 
